--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -14,4 +14,7 @@
     <string name="communicate">Feedback</string>
     <string name="torchlight_is_off">Torchlight is OFF</string>
     <string name="torchlight_is_on">Torchlight is ON</string>
+    <string name="pref_title_information_version">Version</string>
+    <string name="pref_header_information">Information</string>
+    <string name="pref_information_app_description">This app is a privacy-friendly app to utilize the flash of the camera for a light.         &#xa;It is privacy friendly, because it only has the permission it really needs:         &#xa;The flash is for the camera so we need this permission.         &#xa;The flashlight permission is needed to access the flash via the camera access.</string>
 </resources>
