Make GitHub issue url not translatable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="torchlight_is_off">Torchlight is OFF</string>
     <string name="torchlight_is_on">Torchlight is ON</string>
     <string name="error_no_share_app">You don\'t have an app that accepts this share.</string>
-    <string name="github_issue_url">https://github.com/kaeptmblaubaer1000/android-torchlight/issues/new</string>
+    <string name="github_issue_url" translatable="false">https://github.com/kaeptmblaubaer1000/android-torchlight/issues/new</string>
 
     <!-- Strings related to Settings -->
 
