--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -7,7 +7,8 @@
     <string name="logo">Logo</string>
     <string name="exit">Beenden</string>
     <string name="auto_flash">Licht</string>
-    <string name="perm_info_text">Die Taschenlampe benötigt die Kameraberechtigung, weil der Blitz zur Kamera gehört.</string>
+    <string name="perm_info_text">Die Taschenlampe benötigt die Kameraberechtigung, weil der Blitz zur Kamera gehört.
+    </string>
     <string name="no_camera">Fehler: Gerät hat keine Kamera!</string>
     <string name="share">Teilen</string>
     <string name="send_github">Feedback zu GitHub senden</string>
@@ -16,9 +17,11 @@
     <string name="torchlight_is_on">Taschenlampe ist AN</string>
     <string name="pref_title_information_version">Version</string>
     <string name="pref_header_information">Information</string>
-    <string name="pref_information_app_description">Dies ist eine privatsphärenfreundliche App, um den Blitz der Kamera als Licht zu verwenden.
-        &#xa;Sie ist privatsphärenfreundlich, weil sie nur die Berechtigungen hat, die sie wirklich braucht:
-        &#xa;Der Blitz gehört zur Kamera, also brauchen wir diese Berechtigung.
-        &#xa;Die Fotolicht-Berechtigung brauchen wir, um den Kamerazugriff zum zugreifen auf den Blitz zu benutzen.</string>
+    <!-- @formatter:off -->
+    <string name="pref_information_app_description">"Dies ist eine privatsphärenfreundliche App, um den Blitz der Kamera als Licht zu verwenden.
+Sie ist privatsphärenfreundlich, weil sie nur die Berechtigungen hat, die sie wirklich braucht:
+Der Blitz gehört zur Kamera, also brauchen wir diese Berechtigung.
+Die Fotolicht-Berechtigung brauchen wir, um den Kamerazugriff zum zugreifen auf den Blitz zu benutzen."</string>
+    <!-- @formatter:on -->
     <string name="error_no_share_app">Es ist keine App installiert, die zum Teilen der App-Datei geeignet ist.</string>
 </resources>
