--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="logo">Logo</string>
-    <string name="company_name" translatable="false">Kaeptm Blaubaer</string>
+    <string name="company_name" translatable="false">kb1000</string>
     <string name="exit">Exit</string>
     <string name="auto_flash">Light</string>
     <string name="perm_info_text">The flashlight requires the camera permission, because the flash belongs to the
@@ -20,7 +20,7 @@
     <string name="torchlight_is_on">Torchlight is ON</string>
     <string name="error_no_share_app">You don\'t have an app that accepts this share.</string>
     <string name="github_issue_url" translatable="false">
-        https://github.com/kaeptmblaubaer1000/android-torchlight/issues/new/choose
+        https://github.com/kb-1000/android-torchlight/issues/new/choose
     </string>
 
     <!-- Strings related to Settings -->
